[tool.poetry]
name = "mbtr"
version = "0.1.0"
description = "Multi-Bias TextRank"
authors = ["Ahmed Moubtahij"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
nltk = "^3.8.1"
sentence-transformers = "^2.2.2"
numpy = "^1.24.2"
networkx = "^3.0"
scipy = "^1.10.1"
transformers = "^4.27.2"
torch = "^2.0.0"


[tool.poetry.group.dev.dependencies]
mypy = "^1.1.1"
pylint = "^2.17.1"
pyright = "^1.1.300"
deal = "^4.24.1"
evaluate = "^0.4.0"
rouge-score = "^0.1.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pylint]
max-args = 15
disable = [
    "missing-module-docstring",
    "missing-class-docstring",
    "missing-function-docstring",
    "invalid-name",
    "too-few-public-methods",
    "multiple-statements",
    "too-many-instance-attributes",
]

[tool.mypy]
ignore_missing_imports = true
plugins = [
    "numpy.typing.mypy_plugin",
    "deal.mypy",
]

[tool.pyright]
stubPath = ""
reportPrivateImportUsage = false
